2002-03-06  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h: 
	* src/ast.cpp:
	* src/dump.cpp:
	* src/semantic.h:
	* src/unparse.cpp:
	* src/java.g: Rename FloatingPointLiteral to FloatLiteral.
	* src/gencode.java: Add IsHexDigit, IsOctalDigit.
	* src/javaact.cpp:
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javaprs.h:
	* src/javasym.h:
	* src/code.h: Regenerate.
	* src/scanner.h (CheckOctalLiteral): Delete.
	* src/scanner.cpp (ClassifyNumericLiteral): Correctly tokenize
	numeric literals according to JLS chapter 3.
	(ClassifyCharLiteral, ClassifyStringLiteral): Detect bad escape
	sequences during parsing, not syntax or semantic analysis.
	* src/stream.h:
	* src/stream.cpp:
	* src/error.cpp: Fix error messages for parsing literals.
	* src/error.h (INVALID_STRING_VALUE): Delete.
	* src/lookup.cpp:
	* src/expr.cpp: Update to changes in scanner.
	(ProcessAmbiguousName): Remove assertion failure from bad
	java.lang.

2002-03-06  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (ProcessTypeNames): Fix crash in compiling
	java.lang with syntax errors.
	* src/double.cpp (operator>, operator<): Quick optimization.

2002-03-05  Eric Blake  <ebb9@email.byu.edu>

	* src/scanner.cpp (ScanStarComment): Fix bug 2721.

2002-03-05  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (LoadVariable): Fix bug 2728.
	(EmitStatement): Fix bug 2729.
	(ProcessAbruptExit): Fix bug 2731.
	* src/bytecode.h (FindInteger): Fix bug 2730.

2002-02-26  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (ProcessAbruptExit): Fix bug 2713.

2002-02-25  Chris Abbey  <jikes@cabbey.net>

	* configure.in: Fix spacing error.
	* configure: Regenerate.

2002-02-25  Eric Blake  <ebb9@email.byu.edu>

	* src/double.cpp (operator>, operator<): Fix bug 2700.

2002-02-25  Eric Blake  <ebb9@email.byu.edu>

	* src/init.cpp (ProcessVariableInitializer): Fix bug 2702.

2002-02-25  Eric Blake  <ebb9@email.byu.edu>

	* src/semantic.h (DefiniteLoopBody): Update signature.